--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon bin/www",
-    "ssh-dev": "ssh -i 'carbonxco.pem' ubuntu@ec2-13-229-127-73.ap-southeast-1.compute.amazonaws.com"
+    "ssh-dev": "ssh -i 'brm.pem' ubuntu@ec2-18-141-145-143.ap-southeast-1.compute.amazonaws.com"
   },
   "repository": {
     "type": "git",
